Fixed spacing issue with the full screen button for the result image on img2img when the space on the right was smaller than the button size.

--- a/frontend/css/streamlit.main.css
+++ b/frontend/css/streamlit.main.css
@@ -165,7 +165,7 @@ div.gallery:hover {
 }
 .css-ret2ud{
 	padding-left: 10px;
-	padding-right: 10px;
+	padding-right: 25px;
 	gap: initial;
 	display: initial;
 }
